--- a/styles.css
+++ b/styles.css
@@ -96,7 +96,7 @@ footer a:hover {color: #e1e1e1;}
 
 /* HOME ELEMENTS */
 
-#intro {width: 100%; height: 100%; position: relative; background: url(images/page-bg.jpg) no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;}
+#intro {width: 100%; padding: 3em 0; position: relative; background: url(images/page-bg.jpg) no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;}
 
 header {width: 90%; padding-top: 20%;}
 #logo {width: 25%;padding-bottom: 1em;}
