--- a/styles.css
+++ b/styles.css
@@ -46,7 +46,7 @@ h1,h2,h3,h4,h5,h6 {font-family: 'Oswald', sans-serif; font-weight: 400;}
 
 /* HOME ELEMENTS */
 
-#intro {width: 100%; height: 100%; position: relative; background: url(images/page-bg.jpg) no-repeat center center fixed; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;}
+#intro {width: 100%; height: 100%; position: relative; background: url(images/page-bg.jpg) no-repeat center center; -webkit-background-size: cover; -moz-background-size: cover; -o-background-size: cover; background-size: cover;}
 
 header {display: block; width: 85%; margin-left: auto; margin-right: auto; left: 0; right: 0; position: absolute; padding-top: 20%; color: #fff; text-align: center;}
 #logo {display: block; width: 15%; margin: 0 auto; padding-bottom: 2em;}
